# 2fa-microservice

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: push-main copy.yaml  push-main.yaml  tests.yaml
app/: api.py  config.py  exceptions.py  logging_config.py  main.py  serializers.py  utils.py  validators.py  vonage_verify_api_manager.py
app/envs/: .docker  .local
tests/: pytest.ini
tests/integration/: conftest.py  test_api.py
tests/integration/cassettes/: test_integration_2fa_init_not_authenticated.yaml  test_integration_2fa_verify_not_authenticated.yaml  test_integration_init_and_verify_2fa_wrong_otp_code.yaml  test_integration_init_and_verify_happy_flow.yaml
tests/unit/: test_api.py  test_serializers.py  test_validators.py  test_vonage_verify_api_manager.py
