[tool.poetry]
name = "2fa-microservice"
version = "0.1.0"
description = ""
authors = ["MJedr <jedrych.marcysia@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.104.1"
starlette = "<0.28.0"
redis = "^5.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
